testsuite/tests/properties/invalid_node_builder/bad_generic_arity/test.lkt
from common import BaseExample, FooNode

@synthetic class EmptyNode: FooNode {
}

class Example: BaseExample {
    fun f(): NodeBuilder[FooNode, FooNode] = EmptyNode.builder()
}
